--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -267,7 +267,7 @@
       text-align: center;
       padding: 1.5rem;
       color: #6c757d;
-      font-size: 0.9rem;
+      font-size: 0.7rem;
       margin-top: 2rem;
       border-top: 1px solid #eaeaea;
     }
@@ -301,7 +301,7 @@
     <header>
       <h1>{{ page.title }}</h1>
       {% if page.date %}
-        <p class="post-meta">发布日期: {{ page.date | date: "%Y年%m月%d日" }}</p>
+        <p class="post-meta">日期: {{ page.date | date: "%Y年%m月%d日" }}</p>
       {% endif %}
     </header>
     
