--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -335,7 +335,7 @@
     </main>
     
     <footer>
-      <p>© {{ site.time | date: '%Y' }} {{ site.title }} - 使用 Jekyll 构建</p>
+      <p>© {{ site.time | date: '%Y' }} {{ site.title }}</p>
       <p>页面最后更新于: {{ site.time | date: "%Y-%m-%d %H:%M" }}</p>
     </footer>
   </div>
