--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -326,7 +326,7 @@
     <header>
       <h1>{{ page.title }}</h1>
       {% if page.date %}
-        <p class="post-meta">发布日期: {{ page.date | date: "%Y年%m月%d日" }}</p>
+        <p class="post-meta">发布: {{ page.date | date: "%Y年%m月%d日" }}</p>
       {% endif %}
     </header>
     
